// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/openapi/openapi Password password all options 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "description": "User password. (min:50 chars, max:255 chars)",
            "in": "query",
            "name": "password",
            "required": true,
            "schema": {
              "description": "User password. (min:50 chars, max:255 chars)",
              "format": "password",
              "maxLength": 255,
              "minLength": 50,
              "nullable": true,
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Password password simple 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "description": "Parameter without description.",
            "in": "query",
            "name": "password",
            "required": false,
            "schema": {
              "description": "Parameter without description.",
              "format": "password",
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;
